# OpenGL-BallBattle

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
assets/shaders/: border.frag  border.vert  sprite.frag  sprite.vert
include/core/: Application.h  Camera.h  CircleCollider.h  Collider.h  Input.h  Line.h  RectangleCollider.h  ResourceManager.h  Shader.h  Sprite2D.h  TImer.h  Texture2D.h  Utils.h
include/game/: Food.h  FoodRenderer.h  Game.h  GameObject.h  Player.h
src/core/: Application.cpp  Camera.cpp  ColliderDetection.cpp  Input.cpp  Line.cpp  ResourceManager.cpp  Shader.cpp  Sprite2D.cpp  Texture2D.cpp  Timer.cpp  Utils.cpp
src/game/: FoodRenderer.cpp  Game.cpp  Player.cpp
